--- a/04_livrable/website/punr/punr_ch01.html
+++ b/04_livrable/website/punr/punr_ch01.html
@@ -46,8 +46,7 @@
       <div class="ch_nav"><a class="following" href="punr_ch02.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
-            <h5>Au sein de cet article</h5>
-         </div>
+            <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button></div>
          <article>
             <details>
                <summary>Introduction</summary>
@@ -77,7 +76,8 @@
                   la préciser et sans doute sans rien renier du cheminement lui-même, en retrancher
                   quelques passages.</p>
             </details>
-            <h3 id="d1e287">À quoi servent les théories<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
+            <div class="smallgap"></div>
+            <h3 id="d1e287"><span id="page_6" class="STDgray STDsmall pb">[6]</span>À quoi servent les théories<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
             <p class="first">Je ne suis pas un théoricien du roman. J’ai seulement, comme tous les romanciers sans
                doute, aussi bien du passé que du présent, été amené à faire quelques réflexions critiques
                sur les livres que j’avais écrits, sur ceux que je lisais, sur ceux encore que je
@@ -89,7 +89,7 @@
                le premier (<span class="STDitalic">Les Gommes</span>) au refus massif et violent que la grande presse opposa au second (<span class="STDitalic">Le Voyeur</span>), il n’y avait guère de progrès&nbsp;; sinon pour le tirage, qui s’accrut sensiblement.
                Bien sûr, il y eut aussi quelques louanges, çà et là, mais qui parfois me déroutaient
                encore davantage. Ce qui me surprenait le plus, dans les reproches comme dans les
-               éloges, c’était de rencontrer presque partout une référence implicite&nbsp;–&nbsp;ou même explicite&nbsp;–&nbsp;aux
+               <span id="page_7" class="STDgray STDsmall pb">[7]</span>éloges, c’était de rencontrer presque partout une référence implicite&nbsp;–&nbsp;ou même explicite&nbsp;–&nbsp;aux
                grands romans du passé, qui toujours étaient posés comme le modèle sur quoi le jeune
                écrivain devait garder les yeux fixés.</p>
             <p>Dans les revues, je trouvais souvent plus de sérieux. Mais je ne réussissais pas à
@@ -98,13 +98,13 @@
                tout, par ma formation, des milieux littéraires et de leurs habitudes. Je publiais
                donc, dans un journal politico-littéraire à grand tirage (<span class="STDitalic">L’Express</span>), une série de brefs articles où j’exposais quelques idées qui me semblaient tomber
                sous le sens&nbsp;: disant par exemple que les formes romanesques doivent évoluer pour
-               rester vivantes, que les héros de <span class="ref">Kafka</span> n’ont que peu de rapport avec les personnages balzaciens, que le réalisme-socialiste
+               rester vivantes, que les héros de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref2">mention ambiguë</span>, <span class="axi"></span>.</span></span> n’ont que peu de rapport avec les personnages balzaciens, que le réalisme-socialiste
                ou l’engagement sartrien sont difficilement conciliables avec l’exercice problématique
                de la littérature, comme avec celui de n’importe quel art.</p>
             <p>Le résultat de ces articles ne fut pas ce que j’attendais. Ils firent du bruit, mais
                on les jugea, quasi-unanimement, à la fois simplistes et insensés. Poussé toujours
                par le désir de convaincre, je repris alors en les développant les principaux points
-               en litige, dans un essai un peu plus long qui parut dans <span class="STDitalic">La Nouvelle Revue française.</span> L’effet ne fut hélas pas meilleur&nbsp;; et cette récidive&nbsp;–&nbsp;qualifiée de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;manifeste&nbsp;»</span>&nbsp;–&nbsp;me fit en outre sacrer théoricien d’une nouvelle <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;école&nbsp;»</span> romanesque, dont on n’attendait évidemment rien de bon, et dans laquelle on s’empressa
+               en litige, dans un essai un peu plus long qui parut dans <span class="STDitalic">La Nouvelle Revue française.</span> L’effet ne fut hélas pas meilleur&nbsp;; et cette récidive&nbsp;–&nbsp;qualifiée de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;manifeste&nbsp;»</span>&nbsp;–&nbsp;me fit en <span id="page_8" class="STDgray STDsmall pb">[8]</span>outre sacrer théoricien d’une nouvelle <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;école&nbsp;»</span> romanesque, dont on n’attendait évidemment rien de bon, et dans laquelle on s’empressa
                de ranger, un peu au hasard, tous les écrivains qu’on ne savait pas où mettre. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;École du regard&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Roman objectif&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;École de Minuit&nbsp;»</span>, les appellations variaient&nbsp;; quant aux intentions que l’on me prêtait, elles étaient
                en effet délirantes&nbsp;: chasser l’homme du monde, imposer ma propre écriture aux autres
                romanciers, détruire toute ordonnance dans la composition des livres, etc.</p>
@@ -120,22 +120,22 @@
                contemporaine. Si j’emploie volontiers, dans bien des pages, le terme de <span class="STDitalic">Nouveau Roman</span>, ce n’est pas pour désigner une école, ni même un groupe défini et constitué d’écrivains
                qui travailleraient dans le même sens&nbsp;; il n’y a là qu’une appellation commode englobant
                tous ceux qui cherchent de nouvelles formes romanesques, capables d’exprimer (ou de
-               créer) de nouvelles relations entre l’homme et le monde, tous ceux qui sont décidés à inventer le roman, c’est-à-dire à inventer l’homme. Ils
+               créer) de nouvelles relations entre l’homme et le monde, <span id="page_9" class="STDgray STDsmall pb">[9]</span>tous ceux qui sont décidés à inventer le roman, c’est-à-dire à inventer l’homme. Ils
                savent, ceux-là, que la répétition systématique des formes du passé est non seulement
                absurde et vaine, mais qu’elle peut même devenir nuisible&nbsp;: en nous fermant les yeux
                sur notre situation réelle dans le monde présent, elle nous empêche en fin de compte
                de construire le monde et l’homme de demain.</p>
             <p>Louer un jeune écrivain d’aujourd’hui parce qu’il <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;écrit comme Stendhal&nbsp;»</span> représente une double malhonnêteté. D’une part cette prouesse n’aurait rien d’admirable,
                comme on vient de le voir&nbsp;; d’autre part il s’agit là d’une chose parfaitement impossible&nbsp;:
-               pour écrire comme <span class="ref">Stendhal</span>, il faudrait d’abord écrire en 1830. Un écrivain qui réussirait un habile pastiche,
-               si habile même qu’il produirait des pages que <span class="ref">Stendhal</span> aurait pu signer à l’époque, n’aurait en aucune façon la valeur qui serait encore
-               aujourd’hui la sienne s’il avait rédigé ces mêmes pages sous <span class="ref">Charles&nbsp;X</span>. Ce n’était pas un paradoxe que développait à ce propos  <span class="ref">J.-L.&nbsp;Borgès</span> dans <span class="STDitalic">Fictions&nbsp;:</span> le romancier du <span class="STDsc">xx</span><span class="STDexposant">e</span> siècle qui recopierait mot pour mot le <span class="STDitalic">Don Quichotte</span> écrirait ainsi une œuvre totalement différente de celle de <span class="ref">Cervantès</span>.</p>
+               pour écrire comme <span class="ref">Stendhal<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, il faudrait d’abord écrire en 1830. Un écrivain qui réussirait un habile pastiche,
+               si habile même qu’il produirait des pages que <span class="ref">Stendhal<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> aurait pu signer à l’époque, n’aurait en aucune façon la valeur qui serait encore
+               aujourd’hui la sienne s’il avait rédigé ces mêmes pages sous <span class="ref">Charles&nbsp;X<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>. Ce n’était pas un paradoxe que développait à ce propos  <span class="ref">J.-L.&nbsp;Borgès<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> dans <span class="STDitalic">Fictions&nbsp;:</span> le romancier du <span class="STDsc">xx</span><span class="STDexposant">e</span> siècle qui recopierait mot pour mot le <span class="STDitalic">Don Quichotte</span> écrirait ainsi une œuvre totalement différente de celle de <span class="ref">Cervantès<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>.</p>
             <p>D’ailleurs personne n’aurait l’idée de louer un musicien pour avoir, de nos jours,
-               fait du <span class="ref">Beethoven</span>, un peintre du <span class="ref">Delacroix</span>, ou un architecte d’avoir conçu une cathédrale gothique. Beaucoup de romanciers,
+               fait du <span class="ref">Beethoven<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, un peintre du <span class="ref">Delacroix<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, ou un architecte d’avoir conçu une cathédrale gothique. Beaucoup de romanciers,
                heureusement, savent qu’il en va de même en littérature, qu’elle aussi est vivante,
                et que le roman depuis qu’il existe a toujours été nouveau. Comment l’écriture romanesque
-               aurait-elle pu demeurer immobile, figée, lorsque tout évoluait autour d’elle&nbsp;–&nbsp;assez vite même&nbsp;–&nbsp;au cours des
-               cent cinquante dernières années&nbsp;? <span class="ref">Flaubert</span> écrivait le nouveau roman de&nbsp;1860, <span class="ref">Proust</span> le nouveau roman de&nbsp;1910. L’écrivain doit accepter avec orgueil de porter sa propre
+               aurait-elle pu demeurer immo<span id="page_10" class="STDgray STDsmall pb">[10]</span>bile, figée, lorsque tout évoluait autour d’elle&nbsp;–&nbsp;assez vite même&nbsp;–&nbsp;au cours des
+               cent cinquante dernières années&nbsp;? <span class="ref">Flaubert<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> écrivait le nouveau roman de&nbsp;1860, <span class="ref">Proust<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> le nouveau roman de&nbsp;1910. L’écrivain doit accepter avec orgueil de porter sa propre
                date, sachant qu’il n’y a pas de chef-d’œuvre dans l’éternité, mais seulement des
                œuvres dans l’histoire&nbsp;; et qu’elles ne se survivent que dans la mesure où elles ont
                laissé derrière elles le passé, et annoncé l’avenir.</p>
@@ -150,7 +150,7 @@
                de qui partent des <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;messages&nbsp;»</span> que seul le lecteur doit déchiffrer. Tout ce qui risque d’obscurcir le jugement de
                l’écrivain est plus ou moins admis comme favorisant l’éclosion de son œuvre. L’alcoolisme,
                le malheur, la drogue, la passion mystique, la folie, ont tellement encombré les biographies
-               plus ou moins romancées des artistes qu’il semble désormais tout naturel de voir là des nécessités essentielles de leur triste condition, de voir en
+               plus ou moins romancées des artistes qu’il semble désormais tout <span id="page_11" class="STDgray STDsmall pb">[11]</span>naturel de voir là des nécessités essentielles de leur triste condition, de voir en
                tout cas une antinomie entre création et conscience.</p>
             <p>Loin d’être le résultat d’une étude honnête, cette attitude trahit une métaphysique.
                Ces pages auxquelles l’écrivain a donné le jour comme à son insu, ces merveilles non
@@ -158,16 +158,16 @@
                les a dictés. Le romancier, plus qu’un créateur au sens propre, ne serait alors qu’un
                simple médiateur entre le commun des mortels et une puissance obscure, un au-delà
                de l’humanité, un esprit éternel, un dieu...</p>
-            <p>Il suffit en réalité de lire le journal de <span class="ref">Kafka</span>, par exemple, ou la correspondance de <span class="ref">Flaubert</span>, pour se rendre compte aussitôt de la part primordiale prise, déjà dans les grandes
+            <p>Il suffit en réalité de lire le journal de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, par exemple, ou la correspondance de <span class="ref">Flaubert<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, pour se rendre compte aussitôt de la part primordiale prise, déjà dans les grandes
                œuvres du passé, par la conscience créatrice, par la volonté, par la rigueur. Le travail
                patient, la construction méthodique, l’architecture longuement méditée de chaque phrase
-               comme de l’ensemble du livre, cela a de tout temps joué son rôle. Après <span class="STDitalic">Les Faux-Monnayeurs</span>, après <span class="ref">Joyce</span>, après <span class="STDitalic">La Nausée</span>, il semble que l’on s’achemine de plus en plus vers une époque de la fiction où les
+               comme de l’ensemble du livre, cela a de tout temps joué son rôle. Après <span class="STDitalic">Les Faux-Monnayeurs</span>, après <span class="ref">Joyce<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, après <span class="STDitalic">La Nausée</span>, il semble que l’on s’achemine de plus en plus vers une époque de la fiction où les
                problèmes de l’écriture seront envisagés lucidement par le romancier, et où les soucis
                critiques, loin de stériliser la création, pourront au contraire lui servir de moteur.</p>
             <p>Il n’est pas question, nous l’avons vu, d’établir une théorie, un moule préalable
                pour y couler les livres futurs. Chaque romancier, chaque roman, doit inventer sa
                propre forme. Aucune recette ne peut remplacer cette réflexion continuelle. Le livre
-               crée pour lui seul ses propres règles. Encore le mouvement de l’écriture doit-il souvent conduire à les mettre en péril, en échec peut-être, et
+               crée pour lui seul ses propres règles. Encore le mouvement de <span id="page_12" class="STDgray STDsmall pb">[12]</span>l’écriture doit-il souvent conduire à les mettre en péril, en échec peut-être, et
                à les faire éclater. Loin de respecter des formes immuables, chaque nouveau livre
                tend à constituer ses lois de fonctionnement en même temps qu’à produire leur destruction.
                Une fois l’œuvre achevée, la réflexion critique de l’écrivain lui servira encore à
@@ -187,7 +187,7 @@
                que rien ne peut remplacer celles-ci. Un roman qui ne serait que l’exemple de grammaire
                illustrant une règle&nbsp;–&nbsp;même accompagnée de son exception&nbsp;–&nbsp;serait naturellement inutile&nbsp;:
                l’énoncé de la règle suffirait. Tout en réclamant pour l’écrivain le droit à l’intelligence
-               de sa création, et en insistant sur l’intérêt que présente pour lui la conscience de sa propre recherche, nous savons que c’est surtout au niveau de l’écriture
+               de sa création, et en insistant sur l’intérêt que présente pour lui la <span id="page_13" class="STDgray STDsmall pb">[13]</span>conscience de sa propre recherche, nous savons que c’est surtout au niveau de l’écriture
                que cette recherche s’opère, et que tout n’est pas clair à l’instant de la décision.
                Ainsi, après avoir indisposé les critiques en parlant de la littérature dont il rêve,
                le romancier se sent soudain démuni lorsque ces mêmes critiques lui demandent&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Expliquez-nous donc pourquoi vous avez écrit ce livre, ce qu’il signifie, ce que
@@ -205,14 +205,14 @@
             <p>Toute la conscience critique du romancier ne peut lui être utile qu’au niveau des
                choix, non à celui de leur justification. Il sent la nécessité d’employer telle forme,
                de refuser tel adjectif, de construire ce paragraphe de telle façon. Il met tout son
-               soin à la lente recherche du mot exact et de son juste emplacement. Mais de cette nécessité il ne peut produire aucune preuve (sinon, parfois, après coup).
+               soin à la lente recherche du mot exact et de son juste emplacement. <span id="page_14" class="STDgray STDsmall pb">[14]</span>Mais de cette nécessité il ne peut produire aucune preuve (sinon, parfois, après coup).
                Il supplie qu’on le croie, qu’on lui fasse confiance. Et lorsqu’on lui demande pourquoi
                il a écrit son livre, il n’a qu’une réponse&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;C’est pour essayer de savoir pourquoi j’avais envie de l’écrire.&nbsp;»</span></p>
             <div class="smallgap"></div>
             <p>Quant à dire où va le roman, personne évidemment ne peut le faire avec certitude.
                Il est d’ailleurs probable que différentes voies continueront d’exister pour lui parallèlement.
                Pourtant il semble que l’une d’entre elles se dessine déjà avec plus de netteté que
-               les autres. De <span class="ref">Flaubert</span> à <span class="ref">Kafka</span>, une filiation s’impose à l’esprit, qui appelle un devenir. Cette passion de décrire,
+               les autres. De <span class="ref">Flaubert<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> à <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, une filiation s’impose à l’esprit, qui appelle un devenir. Cette passion de décrire,
                qui tous deux les anime, c’est bien elle que l’on retrouve dans le nouveau roman d’aujourd’hui.
                Au-delà du naturalisme de l’un et de l’onirisme métaphysique de l’autre, se dessinent
                les premiers éléments d’une écriture réaliste d’un genre inconnu, qui est en train
