--- a/04_livrable/website/punr/punr_ch02.html
+++ b/04_livrable/website/punr/punr_ch02.html
@@ -46,25 +46,24 @@
       <div class="ch_nav"><a class="preceding" href="punr_ch01.html">&lt;</a><a class="following" href="punr_ch03.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
-            <h5>Au sein de cet article</h5>
-         </div>
+            <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button></div>
          <article>
             <details>
                <summary>Introduction</summary>
             </details>
-            <h3 id="d1e486">Une voie pour le roman futur<br><span class="STDsmall">(1956)</span></h3>
+            <div class="smallgap"></div>
+            <h3 id="d1e486"><span id="page_16" class="STDgray STDsmall pb">[16]</span>Une voie pour le roman futur<br><span class="STDsmall">(1956)</span></h3>
             <p class="first">Il ne semble guère raisonnable, à première vue, de penser qu’une littérature entièrement
                <span class="STDitalic">nouvelle</span> soit un jour&nbsp;–&nbsp;maintenant, par exemple&nbsp;–&nbsp;possible. Les nombreuses tentatives, qui
                se sont succédé depuis plus de trente ans, pour faire sortir le récit de ses ornières
                n’ont abouti, au mieux, qu’à des œuvres isolées. Et –&nbsp;on nous le répète&nbsp;–&nbsp;aucune de
                ces œuvres, quel qu’en fût l’intérêt, n’a emporté l’adhésion d’un public comparable
                à celui du roman bourgeois. La seule conception romanesque qui ait cours aujourd’hui
-               est, en fait, celle de <span class="ref">Balzac</span>.</p>
-            <p>Sans mal on pourrait même remonter jusqu’à madame de La Fayette. La sacro-sainte analyse
-               psychologique constituait, déjà à cette époque, la base de toute prose&nbsp;: c’est elle
-               qui présidait à la conception du livre, à la peinture des personnages, au déroulement
-               de l’intrigue. Un <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;bon&nbsp;»</span> roman, depuis lors, est resté l’étude d’une passion&nbsp;–&nbsp;ou d’un conflit de passions,
-               ou d’une absence de passion&nbsp;–&nbsp;dans un milieu donné. La plupart de nos romanciers contemporains du type traditionnel&nbsp;–&nbsp;c’est-à-dire
+               est, en fait, celle de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>.</p>
+            <p>Sans mal on pourrait même remonter jusqu’à <span class="ref">madame de La Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="axi0">0</span>.</span></span>. La sacro-sainte analyse psychologique constituait, déjà à cette époque, la base
+               de toute prose&nbsp;: c’est elle qui présidait à la conception du livre, à la peinture
+               des personnages, au déroulement de l’intrigue. Un <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;bon&nbsp;»</span> roman, depuis lors, est resté l’étude d’une passion&nbsp;–&nbsp;ou d’un conflit de passions,
+               ou d’une absence de passion&nbsp;–&nbsp;dans un milieu <span id="page_17" class="STDgray STDsmall pb">[17]</span>donné. La plupart de nos romanciers contemporains du type traditionnel&nbsp;–&nbsp;c’est-à-dire
                ceux qui justement recueillent l’approbation des consommateurs&nbsp;–&nbsp;pourraient recopier
                de longs passages de <span class="STDitalic">La Princesse de Clèves</span> ou du <span class="STDitalic">Père Goriot</span> sans éveiller les soupçons du vaste public qui dévore leur production. À peine y
                faudrait-il changer quelque tournure, ou briser certaines constructions, donner çà
@@ -82,7 +81,7 @@
                nouvelle, non seulement est désormais possible, mais est en train déjà de voir le
                jour, et qu’elle va représenter&nbsp;–&nbsp;en s’accomplissant&nbsp;–&nbsp;une révolution plus totale
                que celles d’où naquirent, jadis, le romantisme ou le naturalisme.</p>
-            <p>Il y a forcément du ridicule dans une pareille promesse&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Maintenant les choses vont changer&nbsp;!&nbsp;»</span>Comment feraient-elles pour changer&nbsp;? Vers quoi iraient-elles&nbsp;? Et, surtout, pourquoi
+            <p>Il y a forcément du ridicule dans une pareille promesse&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Maintenant les choses vont changer&nbsp;!&nbsp;»</span><span id="page_18" class="STDgray STDsmall pb">[18]</span>Comment feraient-elles pour changer&nbsp;? Vers quoi iraient-elles&nbsp;? Et, surtout, pourquoi
                maintenant&nbsp;?</p>
             <p>Devant l’art romanesque actuel, cependant, la lassitude est si grande&nbsp;–&nbsp;enregistrée
                et commentée par l’ensemble de la critique&nbsp;–&nbsp;qu’on imagine mal que cet art puisse
@@ -99,8 +98,8 @@
                prêts à reconnaître la valeur d’une recherche, restent malgré tout les héritiers d’une
                tradition. Or, inconsciemment jugée par référence aux formes consacrées, une forme
                nouvelle paraîtra toujours plus ou moins une absence de forme. Ne lit-on pas, dans
-               un de nos plus célèbres dictionnaires encyclopédiques, à l’article <span class="ref">Schönberg</span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
-            <p>Le nouveau-né balbutiant sera toujours considéré comme un monstre, même par ceux que
+               un de nos plus célèbres dictionnaires encyclopédiques, à l’article <span class="ref">Schönberg<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
+            <p><span id="page_19" class="STDgray STDsmall pb">[19]</span>Le nouveau-né balbutiant sera toujours considéré comme un monstre, même par ceux que
                l’expérience passionne. Il y aura de la curiosité, des mouvements d’intérêt, des réserves
                quant à l’avenir. Parmi les louanges sincères, la plupart s’adresseront aux vestiges
                des temps révolus, à tous ces liens que l’œuvre n’aura pas encore rompus et qui la
@@ -120,7 +119,7 @@
                avec des yeux libres. Précisons tout de suite qu’il ne s’agit pas, ici, du naïf souci
                d’objectivité, dont les analyseurs de l’âme (subjective) ont beau jeu de sourire.
                L’objectivité au sens courant du terme&nbsp;–&nbsp;impersonnalité totale du regard&nbsp;–&nbsp;est trop
-               évidemment une chimère. Mais c’est la <span class="STDitalic">liberté</span> qui devrait du moins être possible, et qui ne l’est pas, elle non plus. À chaque
+               évidemment une chimère. Mais <span id="page_20" class="STDgray STDsmall pb">[20]</span>c’est la <span class="STDitalic">liberté</span> qui devrait du moins être possible, et qui ne l’est pas, elle non plus. À chaque
                instant, des franges de culture (psychologie, morale, métaphysique, etc.) viennent
                s’ajouter aux choses, leur donnant un aspect moins étranger, plus compréhensible,
                plus rassurant. Parfois le camouflage est complet&nbsp;: un geste s’efface de notre esprit
@@ -137,7 +136,7 @@
                cette évidence nous frappe avec une force contre laquelle nous ne pouvons plus rien.
                D’un seul coup toute la belle construction s’écroule&nbsp;: ouvrant les yeux à l’improviste,
                nous avons éprouvé, une fois de trop, le choc de cette réalité têtue dont nous faisions
-               semblant d’être venus à bout. Autour de nous, défiant la meute de nos adjectifs animistes ou ménagers, les choses <span class="STDitalic">sont là.</span> Leur surface est nette et lisse, intacte, sans éclat louche ni transparence. Toute
+               semblant d’être venus à bout. Autour de nous, défiant la meute de nos adjec<span id="page_21" class="STDgray STDsmall pb">[21]</span>tifs animistes ou ménagers, les choses <span class="STDitalic">sont là.</span> Leur surface est nette et lisse, intacte, sans éclat louche ni transparence. Toute
                notre littérature n’a pas encore réussi à en entamer le plus petit coin, à en amollir
                la moindre courbe.</p>
             <div class="smallgap"></div>
@@ -156,7 +155,7 @@
                de sympathie, les barreaux de la fenêtre n’étaient que l’impossibilité de sortir...
                Et voici que maintenant on <span class="STDitalic">voit</span> la chaise, le mouvement de la main, la forme des barreaux. Leur signification demeure
                flagrante, mais, au lieu d’accaparer notre attention, elle est comme donnée en plus&nbsp;;
-               en trop, même, car ce qui nous atteint, ce qui persiste dans notre mémoire, ce qui apparaît comme essentiel et irréductible à de vagues notions
+               en trop, même, car ce qui nous atteint, ce qui persiste <span id="page_22" class="STDgray STDsmall pb">[22]</span>dans notre mémoire, ce qui apparaît comme essentiel et irréductible à de vagues notions
                mentales, ce sont les gestes eux-mêmes, les objets, les déplacements et les contours,
                auxquels l’image a restitué d’un seul coup (sans le vouloir) leur <span class="STDitalic">réalité.</span></p>
             <p>Il peut sembler bizarre que ces fragments de réalité brute, que le récit cinématographique
@@ -173,7 +172,7 @@
                dominer, par-dessus toute théorie explicative qui tenterait de les enfermer dans un
                quelconque système de référence, sentimental, sociologique, freudien, métaphysique,
                ou autre.</p>
-            <p>Dans les constructions romanesques futures, gestes et objets seront <span class="STDitalic">là</span> avant d’être <span class="STDitalic">quelque chose</span>&nbsp;; et ils seront encore là après, durs, inaltérables, présents pour toujours et comme se moquant
+            <p>Dans les constructions romanesques futures, gestes et objets seront <span class="STDitalic">là</span> avant d’être <span class="STDitalic">quelque chose</span>&nbsp;; et ils <span id="page_23" class="STDgray STDsmall pb">[23]</span>seront encore là après, durs, inaltérables, présents pour toujours et comme se moquant
                de leur propre sens, ce sens qui cherche en vain à les réduire au rôle d’ustensiles
                précaires, de tissu provisoire et honteux à quoi seule aurait donné forme&nbsp;–&nbsp;et de
                façon délibérée&nbsp;–&nbsp;la vérité humaine supérieure qui s’y est exprimée, pour aussitôt
@@ -191,7 +190,7 @@
                vite de leur indifférence à l’égard de ces prétendues richesses. Alors que le héros
                traditionnel est constamment sollicité, accaparé, détruit par ces interprétations
                que l’auteur propose, rejeté sans cesse dans un <span class="STDitalic">ailleurs</span> immatériel et instable, toujours plus lointain, toujours plus flou, le héros futur
-               au contraire demeurera là. Et ce sont les commentaires qui resteront ailleurs&nbsp;; en face de sa présence irréfutable, ils apparaîtront comme inutiles,
+               au contraire demeurera là. Et ce sont les commentaires qui reste<span id="page_24" class="STDgray STDsmall pb">[24]</span>ront ailleurs&nbsp;; en face de sa présence irréfutable, ils apparaîtront comme inutiles,
                superflus, voire malhonnêtes.</p>
             <div class="smallgap"></div>
             <p>Les pièces à conviction du drame policier nous donnent, paradoxalement, une assez
@@ -210,7 +209,7 @@
                systèmes n’ont qu’une qualité sérieuse, évidente, c’est d’être là.</p>
             <p>Ainsi en va-t-il du monde qui nous entoure. On avait cru en venir à bout en lui assignant
                un sens, et tout l’art du roman, en particulier, semblait voué à cette tâche. Mais
-               ce n’était là que simplification illusoire&nbsp;; et loin de s’en trouver plus clair, plus proche, le monde y a seulement perdu
+               ce n’était là que simplification illu<span id="page_25" class="STDgray STDsmall pb">[25]</span>soire&nbsp;; et loin de s’en trouver plus clair, plus proche, le monde y a seulement perdu
                peu à peu toute vie. Puisque c’est avant tout dans sa présence que réside sa réalité,
                il s’agit donc, maintenant, de bâtir une littérature qui en rende compte.</p>
             <div class="smallgap"></div>
@@ -218,9 +217,9 @@
                chose n’était en train de changer&nbsp;–&nbsp;et même d’une façon totale, sans doute définitive&nbsp;–&nbsp;dans
                les rapports que nous entretenons avec l’univers. Aussi entrevoyons-nous la réponse
                à cette question pleine d’ironie&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Pourquoi maintenant&nbsp;?&nbsp;»</span> Il y a aujourd’hui, en effet, un élément nouveau, qui nous sépare cette fois radicalement
-               de <span class="ref">Balzac</span>, comme de <span class="ref">Gide</span> ou de madame de La Fayette&nbsp;: c’est la destitution des vieux mythes de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;profondeur&nbsp;»</span>.</p>
+               de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, comme de <span class="ref">Gide<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> ou de <span class="ref">madame&nbsp;de&nbsp;La&nbsp;Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="axi0">0</span>.</span></span>&nbsp;: c’est la destitution des vieux mythes de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;profondeur&nbsp;»</span>.</p>
             <p>On sait que toute la littérature romanesque reposait sur eux, sur eux seuls. Le rôle
-               de l’écrivain consistait traditionnellement à creuser dans la <span class="ref">Nature</span>, à l’approfondir, pour atteindre des couches de plus en plus intimes et finir par
+               de l’écrivain consistait traditionnellement à creuser dans la <span class="ref">Nature<span class="refinfo">concept, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, à l’approfondir, pour atteindre des couches de plus en plus intimes et finir par
                mettre au jour quelque bribe d’un secret troublant. Descendu dans l’abîme des passions
                humaines, il envoyait au monde tranquille en apparence (celui de la surface) des messages
                de victoire décrivant les mystères qu’il avait touchés du doigt. Et le vertige sacré
@@ -228,7 +227,7 @@
                au contraire quant à son pouvoir de domination sur le monde. Il y avait des gouffres,
                certes, mais grâce à de vaillants spéléologues on pouvait en sonder le fond.</p>
             <p>Il n’est pas étonnant, dans ces conditions, que le phénomène littéraire par excellence
-               ait résidé dans l’adjectif global et unique, qui tentait de rassembler toutes les qualités internes,
+               ait résidé dans <span id="page_26" class="STDgray STDsmall pb">[26]</span>l’adjectif global et unique, qui tentait de rassembler toutes les qualités internes,
                toute l’âme cachée des choses. Le mot fonctionnait ainsi comme un piège où l’écrivain
                enfermait l’univers pour le livrer à la société.</p>
             <p>La révolution qui s’est accomplie est de taille&nbsp;: non seulement nous ne considérons
