--- a/04_livrable/website/punr/punr_ch05.html
+++ b/04_livrable/website/punr/punr_ch05.html
@@ -46,24 +46,24 @@
       <div class="ch_nav"><a class="preceding" href="punr_ch04.html">&lt;</a><a class="following" href="punr_ch06.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
-            <h5>Au sein de cet article</h5>
-         </div>
+            <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button></div>
          <article>
             <details>
                <summary>Introduction</summary>
             </details>
-            <h3 id="d1e2091">Éléments d’une anthologie moderne</h3>
+            <div class="smallgap"></div>
+            <h3 id="d1e2097"><span id="page_84" class="STDgray STDsmall pb">[84]</span>Éléments d’une anthologie moderne</h3>
             <p class="first">Les quelques œuvres qui vont être rapidement analysées, ou commentées, dans les pages
                qui suivent sont loin d’être les seules à avoir marqué de leurs recherches la littérature
                de cette première moitié du <span class="STDsc">xx</span><span class="STDexposant">e</span> siècle. Ce ne sont même pas toujours celles qui m’auront personnellement le plus
-               impressionné. On remarquera tout de suite l’absence, entre autres, de <span class="ref">Kafka</span>, et la présence au contraire d’écrivains de bien moindre importance. On ne manquera
-               pas de dire aussi que <span class="ref">Joë&nbsp;Bousquet</span> a des côtés très démodés, et que <span class="STDitalic">Godot</span> est trop à la mode, et que souvent ce ne sont pas les ouvrages les plus accomplis
+               impressionné. On remarquera tout de suite l’absence, entre autres, de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, et la présence au contraire d’écrivains de bien moindre importance. On ne manquera
+               pas de dire aussi que <span class="ref">Joë&nbsp;Bousquet<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> a des côtés très démodés, et que <span class="STDitalic">Godot</span> est trop à la mode, et que souvent ce ne sont pas les ouvrages les plus accomplis
                qui ont été choisis pour représenter les auteurs retenus.</p>
             <p>Tout cela est vrai. C’est que les cinq brefs essais reproduits ici seront pour moi
                surtout des exemples, qui me permettront chacun de préciser quelques thèmes et formes
                caractéristiques de cette littérature encore en train de se faire. Les premiers de
                ces exemples remontent déjà à plus de cinquante ans, les derniers appartiennent à
-               notre après-guerre. Tous offrent, de mon point de vue, quelque chose de profondément actuel&nbsp;; c’est ce quelque chose que j’essaie ici de dégager, et qu’il ne
+               notre après-guerre. Tous offrent, de mon point de vue, quelque chose de pro<span id="page_85" class="STDgray STDsmall pb">[85]</span>fondément actuel&nbsp;; c’est ce quelque chose que j’essaie ici de dégager, et qu’il ne
                serait pas difficile de retrouver dans la plupart des recherches contemporaines.</p>
          </article>
          <section class="extract_section">
