--- a/04_livrable/website/punr/punr_ch07.html
+++ b/04_livrable/website/punr/punr_ch07.html
@@ -46,13 +46,13 @@
       <div class="ch_nav"><a class="preceding" href="punr_ch06.html">&lt;</a><a class="following" href="punr_ch08.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
-            <h5>Au sein de cet article</h5>
-         </div>
+            <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button></div>
          <article>
             <details>
                <summary>Introduction</summary>
             </details>
-            <h3 id="d1e2253">La conscience malade de Zeno<br><span class="STDsmall">(1954)</span></h3>
+            <div class="smallgap"></div>
+            <h3 id="d1e2259">La conscience malade de Zeno<br><span class="STDsmall">(1954)</span></h3>
             <p class="first">Zeno Cosini, riche négociant triestin (le Trieste autrichien d’avant la guerre de&nbsp;14),
                rédige pour un psychanalyste les faits principaux de son existence passée. Études
                universitaires incertaines, mort du père, passion volontairement éprouvée pour une
@@ -66,7 +66,7 @@
                florissant, le nom de malade imaginaire ne lui convient pas tout à fait&nbsp;; il sait
                que la médecine n’a que peu de pouvoir sur ses maux, avec les docteurs il finit toujours
                par se quereller et leurs diagnostics ne servent qu’à lui donner de nouveaux troubles&nbsp;;
-               s’il collectionne les médicaments&nbsp;–&nbsp;ou même les absorbe parfois&nbsp;–&nbsp;ce n’est guère dans une intention à proprement parler thérapeutique&nbsp;;
+               s’il collectionne les médicaments&nbsp;–&nbsp;ou même <span id="page_96" class="STDgray STDsmall pb">[96]</span>les absorbe parfois&nbsp;–&nbsp;ce n’est guère dans une intention à proprement parler thérapeutique&nbsp;;
                bien entendu, il se moque autant de la psychanalyse que des traitements par l’électricité
                ou la gymnastique. Dès les premiers feuillets nous trouvons sa profession de foi&nbsp;:
                <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;La maladie est une conviction et je suis né avec cette conviction.&nbsp;»</span> Quelque chose, en somme, comme la grâce.</p>
@@ -83,7 +83,7 @@
                la ruse, la réussite en affaires, la faculté de séduire les femmes et de bien jouer
                du violon&nbsp;–&nbsp;au lieu de ne tirer de celui-ci que des grincements horribles, comme du
                reste de l’existence. L’homme sain ne profite d’ailleurs pas de ces dons pour mener
-               une vie dispersée&nbsp;: il s’en tient, par exemple, à une stricte monogamie. Ce n’est pas
+               une <span id="page_97" class="STDgray STDsmall pb">[97]</span>vie dispersée&nbsp;: il s’en tient, par exemple, à une stricte monogamie. Ce n’est pas
                là une contradiction, car, si pour les uns tout est bonne santé, tout est maladie
                pour les autres.</p>
             <p>Ainsi en va-t-il en particulier des rapports avec le temps. Le temps de Zeno est un
@@ -103,7 +103,7 @@
                comprenant soudain qu’il ne pourra plus jamais leur prouver sa bonne volonté et son
                innocence.</p>
             <p>Zeno ne fait pas étalage de sa maladie. Il essaie de ne pas en parler, de se comporter
-               comme tout le monde dans la mesure du possible. Même, il a <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;pris définitivement les dehors d’un homme joyeux&nbsp;»</span>. De la table familiale, où il arrive à l’heure en bon époux, au bureau où il tient
+               comme tout le <span id="page_98" class="STDgray STDsmall pb">[98]</span>monde dans la mesure du possible. Même, il a <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;pris définitivement les dehors d’un homme joyeux&nbsp;»</span>. De la table familiale, où il arrive à l’heure en bon époux, au bureau où il tient
                avec zèle un emploi non rétribué de comptable, de la Lloyd à la Bourse, du lit de
                sa maîtresse à la maison de beaux-parents qui l’estiment, nous suivons avidement les
                déambulations de ce chasseur qui se traque lui-même sans merci. Et nous le plaçons
@@ -119,7 +119,7 @@
                ou de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">Molloy</span> que la paralysie gagne progressivement depuis le pied. Sa mort, Zeno la connaît d’avance&nbsp;:
                elle commencera par la gangrène des membres inférieurs. Il n’est pas jusqu’à cette
                ville <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;irrédente&nbsp;»</span> de Trieste, où l’on ne parle pas l’italien mais un dialecte mêlé d’allemand et de
-               croate, qui ne fasse songer au Prague germano-tchèque de <span class="ref">Kafka</span> et au Dublin anglo-irlandais de <span class="ref">Joyce</span>&nbsp;–&nbsp;patries de tous ceux qui ne sont pas à l’aise dans leur propre langue. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Une confession <span id="page_99" class="STDgray STDsmall pb">[99]</span>écrite est toujours mensongère, et nous (les Triestins), c’est à chaque mot toscan
+               croate, qui ne fasse songer au Prague germano-tchèque de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> et au Dublin anglo-irlandais de <span class="ref">Joyce<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>&nbsp;–&nbsp;patries de tous ceux qui ne sont pas à l’aise dans leur propre langue. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Une confession écrite est toujours mensongère, et nous (les Triestins), c’est à chaque mot toscan
                   que nous mentons&nbsp;!&nbsp;»</span></p>
             <p>Par surcroît, le narrateur est de mauvaise foi. En présentant son récit, le psychanalyste
                précise qu’il contient une bonne quantité de mensonges. Zeno lui-même en signale quelques-uns
@@ -136,13 +136,13 @@
             <p>La guerre éclate entre l’Italie et l’Autriche. Paradoxalement, le héros prétend découvrir
                son équilibre dans les transactions commerciales effrénées auxquelles l’extension
                du conflit ouvre la porte. Et le livre s’achève sur une étonnante note d’espoir&nbsp;:
-               un jour, un homme <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;fait comme les autres, mais un peu plus malade&nbsp;»</span>, déposera un explosif d’une puissance encore inconnue au centre de la terre. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Une détonation formidable que nul n’entendra&nbsp;–&nbsp;et la terre, revenue à l’état de
+               un jour, <span id="page_100" class="STDgray STDsmall pb">[100]</span>un homme <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;fait comme les autres, mais un peu plus malade&nbsp;»</span>, déposera un explosif d’une puissance encore inconnue au centre de la terre. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Une détonation formidable que nul n’entendra&nbsp;–&nbsp;et la terre, revenue à l’état de
                   nébuleuse, continuera sa course dans les cieux délivrée des hommes&nbsp;–&nbsp;sans parasites,
                   sans maladies.&nbsp;»</span></p>
             <p>Temps malade, langage malade, libido malade, démarche malade, vie malade, conscience
                malade..., il ne faut bien évidemment pas voir là-dedans une vague allégorie sur la
                faute originelle, ou quelque autre lamentation métaphysique. Il s’agit de vie quotidienne
-               et d’expérience directe du monde. Ce que nous dit ainsi <span class="ref">Italo&nbsp;Svevo</span>, c’est que, dans notre société moderne, plus rien n’est <span class="STDitalic">naturel</span>. Et il n’y a même pas de raison pour s’en affliger. Nous pouvons parfaitement être
+               et d’expérience directe du monde. Ce que nous dit ainsi <span class="ref">Italo&nbsp;Svevo<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, c’est que, dans notre société moderne, plus rien n’est <span class="STDitalic">naturel</span>. Et il n’y a même pas de raison pour s’en affliger. Nous pouvons parfaitement être
                joyeux, parler, faire l’amour, faire des affaires, faire la guerre, écrire des romans&nbsp;;
                mais rien de cela ne se fera plus sans y penser, comme on respire. Chacune de nos
                actions se réfléchit sur elle-même et se charge de questions. Sous notre regard, le
