--- a/04_livrable/website/punr/punr_ch10.html
+++ b/04_livrable/website/punr/punr_ch10.html
@@ -46,23 +46,23 @@
       <div class="ch_nav"><a class="preceding" href="punr_ch09.html">&lt;</a><a class="following" href="punr_ch11.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
-            <h5>Au sein de cet article</h5>
-         </div>
+            <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button></div>
          <article>
             <details>
                <summary>Introduction</summary>
             </details>
-            <h3 id="d1e3579">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
+            <div class="smallgap"></div>
+            <h3 id="d1e3585">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
             <p class="first"><span class="quote" onclick="displayExtract('pr_02_92','2','0',1);">«&nbsp;J’y pense, j’y pense, un livre quelle prétention dans un sens, mais quelle extraordinaire
-                  merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget</span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
+                  merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
                qui met tout son soin, depuis déjà quelques années, à <span class="STDitalic">rater</span> ses livres dans les grandes largeurs, est en train de passer à peu près inaperçu&nbsp;–&nbsp;même
                des spécialistes, noyés par profession dans le flot quotidien des récits linéaires,
-               et réussis&nbsp;– alors que ces livres (ceux de <span class="ref">Pinget</span>), apparemment <span class="STDitalic">sans queue ni tête,</span> sont peut-être déjà précisément les <span class="quote" onclick="displayExtract('unknown1','2','9',1);">«&nbsp;extraordinaires merveilles&nbsp;»</span> annoncées.</p>
+               et réussis&nbsp;– alors que ces livres (ceux de <span class="ref">Pinget<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>), apparemment <span class="STDitalic">sans queue ni tête,</span> sont peut-être déjà précisément les <span class="quote" onclick="displayExtract('unknown1','2','9',1);">«&nbsp;extraordinaires merveilles&nbsp;»</span> annoncées.</p>
             <p>Il faut bien tenter d’en retracer, sinon les anecdotes –&nbsp;qui se nouent et se dissolvent
                à chaque page dans des contradictions, des variantes et des sauts périlleux où l’on
                retombe moins souvent sur les pieds que sur la tête&nbsp;–&nbsp;du moins le <span class="STDitalic">mouvement</span> qui, s’il est quelquefois difficile à saisir au milieu de ce sabotage permanent,
                n’est jamais en fin de compte ni hasardeux ni conventionnel.</p>
-            <p><span class="STDitalic">Mahu ou le Matériau,</span> ce titre est déjà un programme. Les personnages de ce <span class="STDitalic">roman</span> n’appartiennent ni au domaine de la psychologie, ni à celui de la sociologie, ni même au symbolisme,
+            <p><span class="STDitalic">Mahu ou le Matériau,</span> ce titre est déjà un programme. Les personnages de ce <span class="STDitalic">roman</span> n’appartien<span id="page_136" class="STDgray STDsmall pb">[136]</span>nent ni au domaine de la psychologie, ni à celui de la sociologie, ni même au symbolisme,
                ni, encore moins, à l’histoire ou à la morale&nbsp;; ce sont des <span class="STDitalic">créations pures</span> qui ne relèvent que de l’esprit de création. Leur existence, au-delà d’un passé confus
                de rêves et d’impressions insaisissables, n’est qu’un devenir sans projet soumis de
                phrase en phrase aux plus extravagantes mutations, à la merci de la moindre pensée
@@ -79,7 +79,7 @@
                sur l’autre, se détruisant mutuellement ou se rassemblant en une synthèse inattendue.</p>
             <p>Il y a là le romancier Lattirail, mademoiselle Lorpailleur, également romancière,
                le postier Sinture qui détourne et truque la correspondance, Petite-Fiente, fillette
-               perverse qui <span class="STDitalic">fait des histoires,</span> Juan Simon, le patron de Mahu, le fils Pinson, Julia, etc. On ne sait pas trop déjà dans quelle mesure
+               perverse qui <span class="STDitalic">fait des histoires,</span> Juan Simon, le <span id="page_137" class="STDgray STDsmall pb">[137]</span>patron de Mahu, le fils Pinson, Julia, etc. On ne sait pas trop déjà dans quelle mesure
                certains d’entre eux n’ont pas été inventés par les autres. Que dire alors de la foule
                des comparses plus ou moins épisodiques, matérialisations des pensées de tel ou tel
                protagoniste, qui apparaissent et disparaissent, se transforment, se multiplient,
@@ -95,12 +95,12 @@
                   ou de ne pas avoir été giflée, on ne sait pas... ou plutôt de l’avoir elle-même giflé...</span> Le récit devient en quelques pages d’une complication extraordinairement inconfortable,
                qu’il n’est malheureusement pas possible d’analyser ici&nbsp;; aussi, lorsque interviennent
                ensuite les deux romanciers et le receveur des postes, qui tous les trois prétendent
-               ouvertement <span class="STDitalic">écrire l’histoire,</span> celle-ci dépasse à l’instant avec allégresse les bornes de l’incompréhensible. En désespoir de cause,
+               ouvertement <span class="STDitalic">écrire l’histoire,</span> celle-ci dépasse <span id="page_138" class="STDgray STDsmall pb">[138]</span>à l’instant avec allégresse les bornes de l’incompréhensible. En désespoir de cause,
                Mahu rentre chez soi, débarrassé enfin&nbsp;–&nbsp;croit-il&nbsp;–&nbsp;de tout ce fatras de <span class="quote" onclick="displayExtract('pr_01_114','2','4',1);">«&nbsp;personnages mous&nbsp;»</span>. Les cent dernières pages du livre ne sont plus que du matériau à l’état brut, brefs
                morceaux de réalité décomposée qui se révèlent au moins aussi curieux que tout ce
                qui précédait, aussi riches, aussi passionnants&nbsp;: des mots qui tombent du ciel sans
                laisser de traces, des enfants qui parlent <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;à l’envers&nbsp;»</span>, un petit bout d’oreille qui bouge près d’une colonne dans une réunion publique...
-               Il est désormais impossible de dire si <span class="ref">Robert&nbsp;Pinget</span> est un chercheur minutieux dans son laboratoire ou un voyant qui abuse de sa drogue.
+               Il est désormais impossible de dire si <span class="ref">Robert&nbsp;Pinget<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="axi"></span>.</span></span> est un chercheur minutieux dans son laboratoire ou un voyant qui abuse de sa drogue.
                Le récit se clôt sur cette conclusion <span class="STDitalic">énigmatique&nbsp;:</span><span class="quote" onclick="displayExtract('pr_01_184','2','0',1);">«&nbsp;Voilà. Je n’ai plus rien à dire, néanmoins tout me demeure, j’ai gagné.&nbsp;»</span></p>
             <p>Mais inéluctablement, pour <span class="quote" onclick="displayExtract('pr_02_81','2','0',1);">«&nbsp;l’honneur de continuer&nbsp;»</span>, voici que tout recommence. Cela s’appelle cette fois <span class="STDitalic">Le Renard et la Boussole.</span> Le nouveau roman débute dans une sorte de grisaille, au réveil comme d’habitude&nbsp;;
                des <span class="STDitalic">possibles</span> errent dans les coins&nbsp;–&nbsp;des vies possibles, des littératures possibles... Un roman,
@@ -108,7 +108,7 @@
                insistance&nbsp;: <span class="quote" onclick="displayExtract('pr_02_09','2','0',1);">«&nbsp;On m’a piqué avec une longue aiguille...&nbsp;»</span> Il faut préciser&nbsp;: <span class="quote" onclick="displayExtract('pr_02_16','2','0',1);">«&nbsp;La naissance d’un objet, j’ai remarqué, n’a pas lieu aujourd’hui, il y a du mouvement
                   tout autour qui l’empêche de montrer la tête et demain tu t’avises qu’il existe. Par
                   conséquent la meilleure explication des origines serait de commencer par des bruits
-                  de bouche et de glisser progressivement vers des paroles <span id="page_139" class="STDgray STDsmall pb">[139]</span>articulées jusqu’au moment où l’auditeur sans se poser aucune question participe à
+                  de bouche et de glisser progressivement vers des paroles articulées jusqu’au moment où l’auditeur sans se poser aucune question participe à
                   ton histoire.&nbsp;»</span> C’est justement ce qui se produit ici&nbsp;; peu à peu, au milieu des digressions et des
                faillites, une tache de couleur rousse s’impose dans le tableau (les héros font de
                la peinture dans <span class="STDitalic">Le Renard,</span> comme ils écrivaient des romans dans <span class="STDitalic">Mahu</span>). Cette masse d’abord indistincte prend bientôt la forme d’un renard, qui se dédouble
@@ -121,13 +121,13 @@
                   on les note, on les note c’est tout.&nbsp;»</span></p>
             <p>Et le plus naturellement du monde, Renard, qui s’est depuis longtemps confondu avec
                le narrateur (nommé John Tintouin Porridge), se retrouve à Fantoine. Mahu et les autres
-               lui reprochent de les avoir un instant quittés. Ne les aimait-il plus&nbsp;? <span class="quote" onclick="displayExtract('pr_02_186','2','0',1);">«&nbsp;Mais oui je vous aime, nous sommes liés pour la vie... me voici.&nbsp;»</span> Au milieu des apéritifs et des déambulations vaseuses du retour, surgit mademoiselle
+               lui reprochent de les avoir <span id="page_140" class="STDgray STDsmall pb">[140]</span>un instant quittés. Ne les aimait-il plus&nbsp;? <span class="quote" onclick="displayExtract('pr_02_186','2','0',1);">«&nbsp;Mais oui je vous aime, nous sommes liés pour la vie... me voici.&nbsp;»</span> Au milieu des apéritifs et des déambulations vaseuses du retour, surgit mademoiselle
                Lorpailleur, la romancière&nbsp;; elle demande à John où il voulait en venir. Il se rappelle
                vaguement qu’il projetait une étude sur Marie Stuart, il a parlé des <span class="STDitalic">origines,</span><span class="quote" onclick="displayExtract('pr_02_221','2','0',1);">«&nbsp;ensuite ça a bifurqué&nbsp;»</span>. Alors elle lui donne ce conseil&nbsp;: un livre, ça se commence toujours par&nbsp;: <span class="quote" onclick="displayExtract('pr_02_222','2','0',1);">«&nbsp;Je suis né...&nbsp;»</span> Et celui-ci s’achève paradoxalement sur toute une collection de débuts possibles,
                s’ouvrant tous par ces trois mots, mais dégénérant à la fin en une cacophonie de phrases
                sans suite, de cris, de balbutiements et autres <span class="quote" onclick="displayExtract('pr_02_239','2','1',1);">«&nbsp;bruits de bouche&nbsp;»</span>.</p>
             <p>Une fois de plus tout est à refaire. Cependant, en un sens (le seul qui nous importe),
-               <span class="ref">Robert&nbsp;Pinget</span> a encore <span class="quote" onclick="displayExtract('pr_01_184','2','0',1);">«&nbsp;gagné&nbsp;»</span>.</p>
+               <span class="ref">Robert&nbsp;Pinget<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> a encore <span class="quote" onclick="displayExtract('pr_01_184','2','0',1);">«&nbsp;gagné&nbsp;»</span>.</p>
          </article>
          <section class="extract_section">
             <div id="unknown_0" class="extractHide">
