--- a/04_livrable/website/punr/punr_ch06.html
+++ b/04_livrable/website/punr/punr_ch06.html
@@ -46,16 +46,16 @@
       <div class="ch_nav"><a class="preceding" href="punr_ch05.html">&lt;</a><a class="following" href="punr_ch07.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
-            <h5>Au sein de cet article</h5>
-         </div>
+            <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button></div>
          <article>
             <details>
                <summary>Introduction</summary>
             </details>
-            <h3 id="d1e2120">Énigmes et transparence chez Raymond&nbsp;Roussel <br><span class="STDsmall">(1963)</span></h3>
-            <p class="first"><span class="ref">Raymond&nbsp;Roussel</span> décrit&nbsp;; et, au-delà de ce qu’il décrit, il n’y a rien, rien de ce qui peut traditionnellement
+            <div class="smallgap"></div>
+            <h3 id="d1e2126">Énigmes et transparence chez Raymond&nbsp;Roussel <br><span class="STDsmall">(1963)</span></h3>
+            <p class="first"><span class="ref">Raymond&nbsp;Roussel<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> décrit&nbsp;; et, au-delà de ce qu’il décrit, il n’y a rien, rien de ce qui peut traditionnellement
                s’appeler un message. Pour reprendre une des expressions favorites de la critique
-               littéraire académique, <span class="ref">Roussel</span> ne semble guère avoir <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;quelque chose à dire&nbsp;»</span>. Aucune transcendance, aucun dépassement humaniste, ne peuvent s’appliquer aux séries
+               littéraire académique, <span class="ref">Roussel<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> ne semble guère avoir <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;quelque chose à dire&nbsp;»</span>. Aucune transcendance, aucun dépassement humaniste, ne peuvent s’appliquer aux séries
                d’objets, de gestes et d’événements qui constituent, dès la première vue, son univers.</p>
             <p>Il arrive que, pour les besoins d’une ligne descriptive très stricte, il ait à nous
                conter quelque anecdote psychologique, ou bien quelque coutume religieuse imaginaire,
@@ -64,11 +64,11 @@
                à l’étude des caractères humains ou des passions, la plus petite contribution à la
                sociologie, la moindre méditation philosophique. Il s’agit toujours en effet de sentiments
                ouvertement conventionnels (amour filial, dévouement, grandeur d’âme, traîtrise, et
-               toujours traités à la manière des images d’Épinal), ou bien de rites <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;gratuits&nbsp;»</span>, ou de symbolismes reconnus et de philosophies usées. Entre le non-sens absolu et
+               toujours <span id="page_87" class="STDgray STDsmall pb">[87]</span>traités à la manière des images d’Épinal), ou bien de rites <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;gratuits&nbsp;»</span>, ou de symbolismes reconnus et de philosophies usées. Entre le non-sens absolu et
                le sens épuisé il ne reste encore une fois que les choses elles-mêmes, objets, gestes,
                etc.</p>
-            <p>Sur le plan du langage, <span class="ref">Roussel</span> ne répond guère mieux aux exigences de la critique. Beaucoup l’ont déjà signalé,
-               et bien entendu pour s’en plaindre&nbsp;: <span class="ref">Raymond&nbsp;Roussel</span> écrit mal. Son style est terne et neutre. Lorsqu’il sort de l’ordre du constat&nbsp;–&nbsp;c’est-à-dire
+            <p>Sur le plan du langage, <span class="ref">Roussel<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> ne répond guère mieux aux exigences de la critique. Beaucoup l’ont déjà signalé,
+               et bien entendu pour s’en plaindre&nbsp;: <span class="ref">Raymond&nbsp;Roussel<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> écrit mal. Son style est terne et neutre. Lorsqu’il sort de l’ordre du constat&nbsp;–&nbsp;c’est-à-dire
                de la platitude avouée&nbsp;: le domaine du <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;il y a&nbsp;»</span> et du <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;se trouve placé à une certaine distance&nbsp;»</span>&nbsp;–, c’est toujours pour tomber dans l’image banale, dans la métaphore la plus rebattue,
                sortie elle aussi de quelque arsenal des conventions littéraires. Enfin l’organisation
                sonore des phrases, le rythme des mots, leur musique ne semblent poser pour l’auteur
@@ -77,11 +77,11 @@
                enchevêtrements cacophoniques, des vers où il faut compter sur ses doigts pour s’apercevoir
                que les alexandrins ont vraiment douze pieds.</p>
             <p>Nous voici donc en présence de l’envers parfait de ce qu’il est convenu d’appeler
-               un bon écrivain&nbsp;: <span class="ref">Raymond&nbsp;Roussel</span> n’a rien à dire et il le dit mal... Et pourtant son œuvre commence à être reconnue
+               un bon écrivain&nbsp;: <span class="ref">Raymond&nbsp;Roussel<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> n’a rien à dire et il le dit mal... Et pourtant son œuvre commence à être reconnue
                par tous comme l’une des plus importantes de la littérature française au début de
                ce siècle, une de celles qui ont exercé leur fascination sur plusieurs générations
                d’écrivains et d’artistes, une de celles, sans aucun doute, que l’on doit compter
-               parmi les ancêtres directs du roman moderne&nbsp;; d’où l’intérêt sans cesse croissant qui se porte aujourd’hui
+               parmi les ancêtres <span id="page_88" class="STDgray STDsmall pb">[88]</span>directs du roman moderne&nbsp;; d’où l’intérêt sans cesse croissant qui se porte aujourd’hui
                sur cette œuvre opaque et décevante.</p>
             <p>Voyons d’abord l’opacité. C’est, aussi bien, une excessive transparence. Comme il
                n’y a jamais rien au-delà de la chose décrite, c’est-à-dire qu’aucune surnature ne
@@ -101,7 +101,7 @@
                forme de devinettes, de rébus, d’assemblages en apparence absurdes, de phrases à clef,
                de boîtes à double fond, etc. Les issues dérobées, les souterrains faisant communiquer
                deux lieux sans rapports visibles, les révélations soudaines sur les dessous d’une
-               filiation contestée, jalonnent ce monde rationaliste à l’image des romans noirs de la meilleure tradition, transformant
+               filiation contestée, jalonnent ce <span id="page_89" class="STDgray STDsmall pb">[89]</span>monde rationaliste à l’image des romans noirs de la meilleure tradition, transformant
                un instant l’espace géométrique des situations et des dimensions en un nouveau <span class="STDitalic">Chateau des Pyrénées...</span> Mais non, le mystère ici se contrôle sans cesse trop bien. Non seulement ces énigmes
                sont exposées avec trop de clarté, analysées trop objectivement, et s’affirment trop
                comme énigmes, mais encore, au terme d’un discours plus ou moins long, leur solution
@@ -119,7 +119,7 @@
                que ramener au pur spectacle d’un geste privé de sens. Une fois de plus, la signification
                trop transparente rejoint la totale opacité.</p>
             <p>Ailleurs, on commence par nous proposer un assemblage de mots, aussi hétéroclite que
-               possible –&nbsp;placé par exemple sous une statue, elle-même chargée de multiples particularités déconcertantes (et données comme telles)&nbsp;–&nbsp;et l’on
+               possible –&nbsp;placé par exemple sous une statue, elle-même char<span id="page_90" class="STDgray STDsmall pb">[90]</span>gée de multiples particularités déconcertantes (et données comme telles)&nbsp;–&nbsp;et l’on
                nous explique ensuite longuement la signification (toujours <span class="STDitalic">immédiate,</span> au ras des mots) de la phrase-devinette, et comment elle se rapporte directement
                à la statue, dont les détails étranges se révèlent alors comme tout à fait nécessaires,
                etc. Or ces élucidations en chaîne, extraordinairement complexes, ingénieuses, et
@@ -137,8 +137,8 @@
             <p>Cette recherche, nous l’avons dit, est purement formelle. C’est avant tout un itinéraire,
                un chemin logique qui conduit d’un état donné à un autre état –&nbsp;ressemblant beaucoup
                au premier, bien qu’il soit atteint par un long détour. On en trouve un nouvel exemple&nbsp;–&nbsp;et
-               qui a l’avantage supplémentaire de se situer entièrement dans le domaine du langage&nbsp;–&nbsp;avec les courts récits posthumes dont
-               <span class="ref">Roussel</span> a lui-même expliqué l’architecture&nbsp;: deux phrases qui se prononcent de façon identique,
+               qui a l’avantage supplémentaire de se <span id="page_92" class="STDgray STDsmall pb">[92]</span>situer entièrement dans le domaine du langage&nbsp;–&nbsp;avec les courts récits posthumes dont
+               <span class="ref">Roussel<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> a lui-même expliqué l’architecture&nbsp;: deux phrases qui se prononcent de façon identique,
                à une lettre près, mais dont les sens sont totalement sans rapport, à cause des acceptions
                différentes dans lesquelles sont pris les mots semblables. Le trajet, c’est ici l’histoire,
                l’anecdote, permettant de réunir les deux phrases, qui constitueront, l’une les premiers
@@ -146,14 +146,14 @@
                par leur fonction d’ustensiles, de véhicules, d’intermédiaires&nbsp;; l’anecdote n’a ouvertement
                plus de contenu, mais un mouvement, un ordre, une composition&nbsp;; elle n’est plus, elle
                aussi, qu’une mécanique&nbsp;: à la fois machine à reproduire et machine à modifier.</p>
-            <p>Car il faut insister sur l’importance que <span class="ref">Roussel</span> attache à cette très légère <span class="STDitalic">modification</span> de son séparant les deux phrases-clefs, sans parler de la modification générale du
+            <p>Car il faut insister sur l’importance que <span class="ref">Roussel<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> attache à cette très légère <span class="STDitalic">modification</span> de son séparant les deux phrases-clefs, sans parler de la modification générale du
                sens. Le récit a opéré sous nos yeux, d’une part un changement profond de ce que signifie
                le monde&nbsp;–&nbsp;et le langage&nbsp;–, d’autre part un infime décalage superficiel (la lettre
                altérée)&nbsp;; le texte <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;se mord la queue&nbsp;»</span>, mais avec une petite irrégularité, une petite entorse... et qui change tout.</p>
             <p>Fréquemment aussi, nous trouvons la simple <span class="STDitalic">reproduction</span> plastique, comme cette mosaïque que dessine la hie déjà citée. Les exemples abondent,
                que ce soit dans les romans, les pièces ou les poèmes, de ces images de toutes sortes&nbsp;:
                statues, gravures, tableaux, ou même dessins grossiers sans aucun caractère artistique.
-               Le plus connu de ces objets est la vue en miniature que l’on aperçoit dans le manche d’un porteplume. Bien entendu, la précision
+               Le plus connu de ces objets est la vue en minia<span id="page_93" class="STDgray STDsmall pb">[93]</span>ture que l’on aperçoit dans le manche d’un porteplume. Bien entendu, la précision
                des détails y est aussi poussée que si l’auteur nous montrait une scène véritable,
                grandeur nature, ou même agrandie à l’aide d’un appareil d’optique, jumelles ou microscope.
                Une image de quelques millimètres de côté nous fait ainsi voir une plage comportant
@@ -162,8 +162,8 @@
                baie passe une route&nbsp;; et sur cette route roule une voiture, et un homme est assis
                à l’intérieur de la voiture&nbsp;; cet homme tient une canne, dont le pommeau représente...,
                etc.</p>
-            <p>La <span class="STDitalic">vue,</span> sens privilégié chez <span class="ref">Roussel</span>, atteint très vite une acuité démentielle, tendant vers l’infini. Ce caractère est
-               rendu sans doute encore plus provocant du fait qu’il s’agit d’une reproduction. <span class="ref">Roussel</span> décrit volontiers, nous l’avons signalé, un univers qui n’est pas donné comme réel,
+            <p>La <span class="STDitalic">vue,</span> sens privilégié chez <span class="ref">Roussel<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, atteint très vite une acuité démentielle, tendant vers l’infini. Ce caractère est
+               rendu sans doute encore plus provocant du fait qu’il s’agit d’une reproduction. <span class="ref">Roussel<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> décrit volontiers, nous l’avons signalé, un univers qui n’est pas donné comme réel,
                mais comme déjà représenté. Il aime placer un artiste intermédiaire entre lui-même
                et le monde des hommes. Le texte que l’on nous propose est une relation concernant
                un double. Le grossissement démesuré de certains éléments lointains ou minuscules
@@ -171,7 +171,7 @@
                regarder de tout près le détail qui retient son attention. De toute évidence, lui
                aussi invente, à l’instar de ces nombreux créateurs&nbsp;–&nbsp;de machines ou de procédés&nbsp;–&nbsp;qui
                peuplent toute l’œuvre. La vue est ici une vue <span class="STDitalic">imaginaire.</span></p>
-            <p>Un autre caractère frappant de ces images est ce que l’on pourrait appeler leur <span class="STDitalic">instantanéité.</span> La vague qui s’apprête à déferler, l’enfant qui joue au cerceau sur la plage, ailleurs la statue
+            <p>Un autre caractère frappant de ces images est ce que l’on pourrait appeler leur <span class="STDitalic">instantanéité.</span> La vague <span id="page_94" class="STDgray STDsmall pb">[94]</span>qui s’apprête à déferler, l’enfant qui joue au cerceau sur la plage, ailleurs la statue
                d’un personnage en train d’accomplir un geste éloquent (même si le sens en est d’abord
                absent, à l’état de rébus), ou l’objet figuré à mi-chemin du sol et de la main qui
                vient de le lâcher, tout est donné comme en plein mouvement, mais figé au beau milieu
